Added an outline for the user authentication system. TODO: Make the correct request from the angular app